添加分类、标签、友情链接页面

--- a/source/_posts/浏览器原理.md
+++ b/source/_posts/浏览器原理.md
@@ -2,6 +2,8 @@
 title: 浏览器原理
 date: 2020-05-26 11:08:57
 tags:
+categories: 
+- 计算机网路
 ---
 ##### 一、主要功能
 浏览器的主要功能是将用户选择的web资源呈现出来，它需要从服务器请求资源，并将其显示在浏览器窗口中，资源的格式通常是HTML，也包括PDF、image及其他格式。用户用URI（Uniform Resource Identifier统一资源标识符）来指定所请求资源的位置。
