--- a/source/_posts/计算机网路词汇.md
+++ b/source/_posts/计算机网路词汇.md
@@ -2,7 +2,10 @@
 title: 计算机网路词汇
 date: 2020-05-26 11:05:02
 tags:
+- IP
 top: ture
+categories: 
+- 计算机网路
 ---
 ##### IP：Internet Protocol 网络之间互连的协议
 
