添加文章、分类、标签

--- a/source/_posts/强类型语言、弱类型语言.md
+++ b/source/_posts/强类型语言、弱类型语言.md
@@ -2,6 +2,10 @@
 title: 强类型语言、弱类型语言
 date: 2020-05-26 11:06:04
 tags:
+- 强类型语言
+- 弱类型语言
+categories: 
+- 编程语言
 ---
 ##### 强类型语言，当你定义一个变量是某个类型，如果不经过代码显式转换（强制转化）过，它就永远都是这个类型，如果把它当做其他类型来用，就会报错。  
 
