--- a/source/_posts/计算机网路词汇.md
+++ b/source/_posts/计算机网路词汇.md
@@ -3,6 +3,31 @@ title: 计算机网路词汇
 date: 2020-05-26 11:05:02
 tags:
 - IP
+- SEO
+- B2B
+- B2C
+- C2C
+- O2O
+- 暗网
+- 共享经济
+- 新零售
+- GUI
+- CLI
+- OOP
+- API
+- MVC模型
+- SDK
+- URL
+- CMS
+- UED
+- 病毒式营销
+- 墨菲定律
+- 摩尔定律
+- 局域网
+- to B
+- to C
+- SSD
+- HDD
 top: ture
 categories: 
 - 计算机网路
@@ -10,9 +35,9 @@ categories:
 ##### IP：Internet Protocol 网络之间互连的协议
 
 ##### SEO：Search Engine Optimization 搜索引擎优化。利用搜索引擎的搜索规则来提高展示排名。
-
-##### B2B：Business to Business 企业对企业的电子商务，如阿里巴巴。
 <!--more-->
+##### B2B：Business to Business 企业对企业的电子商务，如阿里巴巴。
+
 ##### B2C：Business to Customer 企业对个人的电子商务，如京东。
 
 ##### C2C：Customer to Customer 个人对个人的电子商务，如淘宝。
