--- a/source/_posts/浏览器原理.md
+++ b/source/_posts/浏览器原理.md
@@ -2,8 +2,15 @@
 title: 浏览器原理
 date: 2020-05-26 11:08:57
 tags:
+- 用户界面
+- 浏览器引擎
+- 渲染引擎
+- 网络
+- UI后端
+- JS解释器
+- 数据存储
 categories: 
-- 计算机网路
+- 浏览器
 ---
 ##### 一、主要功能
 浏览器的主要功能是将用户选择的web资源呈现出来，它需要从服务器请求资源，并将其显示在浏览器窗口中，资源的格式通常是HTML，也包括PDF、image及其他格式。用户用URI（Uniform Resource Identifier统一资源标识符）来指定所请求资源的位置。
@@ -17,7 +24,7 @@ categories:
 6. JS解释器 － 用来解释执行JS代码。
 7. 数据存储 － 属于持久层，浏览器需要在硬盘中保存类似cookie的各种数据，HTML5定义了web database技术，这是一种轻量级完整的客户端存储技术
 
-![2011110316262567.png](http://alivnram-test.oss-cn-beijing.aliyuncs.com/2011110316262567.png)
+![browser001.png](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/browser001.png)
 
 需要注意的是，不同于大部分浏览器，Chrome为每个Tab分配了各自的渲染引擎实例，每个Tab就是一个独立的进程。
 
