--- a/source/_posts/沙盒.md
+++ b/source/_posts/沙盒.md
@@ -4,7 +4,7 @@ date: 2020-05-28 09:31:00
 tags:
 - sandbox
 categories: 
-- 计算机网路
+- 计算机网络
 ---
 在计算机安全领域，沙盒（英语：sandbox，又译为沙箱）是一种安全机制，为运行中的程序提供的隔离环境。通常是作为一些来源不可信、具破坏力或无法判定程序意图的程序提供实验之用。
 <!--more-->
