--- a/source/_posts/浏览器原理.md
+++ b/source/_posts/浏览器原理.md
@@ -24,7 +24,7 @@ categories:
 6. JS解释器 － 用来解释执行JS代码。
 7. 数据存储 － 属于持久层，浏览器需要在硬盘中保存类似cookie的各种数据，HTML5定义了web database技术，这是一种轻量级完整的客户端存储技术
 
-![browser001.png](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/browser001.png)
+![browser001.png](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/browser001.jpg)
 
 需要注意的是，不同于大部分浏览器，Chrome为每个Tab分配了各自的渲染引擎实例，每个Tab就是一个独立的进程。
 
