--- a/source/_posts/正则表达式.md
+++ b/source/_posts/正则表达式.md
@@ -61,7 +61,8 @@ n+
 n*	
 //匹配任何包含零个或多个 n 的字符串。
 
-例如，/bo*/ 匹配 "A ghost booooed" 中的 "boooo"，"A bird warbled" 中的 "b"，但是不匹配 "A goat grunted"。
+例如，/bo*/ 匹配 "A ghost booooed" 中的 "boooo"，"A bird warbled" 中的 "b"，
+但是不匹配 "A goat grunted"。
 
 n?	
 //匹配任何包含零个或一个 n 的字符串。
@@ -71,7 +72,8 @@ n?
 n{X}	
 //匹配包含 X 个 n 的序列的字符串。
 
-例如，/a{2}/ 不匹配 "candy," 中的 "a"，但是匹配 "caandy," 中的两个 "a"，且匹配 "caaandy." 中的前两个 "a"。
+例如，/a{2}/ 不匹配 "candy," 中的 "a"，但是匹配 "caandy," 中的两个 "a"，
+且匹配 "caaandy." 中的前两个 "a"。
 
 n{X,}	
 //X 是一个正整数。前面的模式 n 连续出现至少 X 次时匹配。
@@ -81,7 +83,8 @@ n{X,}
 n{X,Y}	
 //X 和 Y 为正整数。前面的模式 n 连续出现至少 X 次，至多 Y 次时匹配。
 
-例如，/a{1,3}/ 不匹配 "cndy"，匹配 "candy," 中的 "a"，"caandy," 中的两个 "a"，匹配 "caaaaaaandy" 中的前面三个 "a"。注意，当匹配 "caaaaaaandy" 时，即使原始字符串拥有更多的 "a"，匹配项也是 "aaa"。
+例如，/a{1,3}/ 不匹配 "cndy"，匹配 "candy," 中的 "a"，"caandy," 中的两个 "a"，匹配 "caaaaaaandy" 
+中的前面三个 "a"。注意，当匹配 "caaaaaaandy" 时，即使原始字符串拥有更多的 "a"，匹配项也是 "aaa"。
 
 n$	//匹配任何结尾为 n 的字符串。
 ^n	//匹配任何开头为 n 的字符串。
