--- a/source/_posts/前端学习思维导图.md
+++ b/source/_posts/前端学习思维导图.md
@@ -13,3 +13,5 @@ categories:
 ![mindmapping002](https://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/mindmapping002.jpg)
 
 ![mindmapping003](https://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/mindmapping003.jpg)
+
+![mindmapping004](https://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/mindmapping004.jpg)
