--- a/source/_posts/汽车知识.md
+++ b/source/_posts/汽车知识.md
@@ -29,7 +29,7 @@ categories:
 ##### 涡轮增压
 涡轮增压器实际上是一个空气紧缩机，它运用发动机排出的废气气流作为动力来推动涡轮增压器内的涡轮，涡轮又股动同轴的叶轮，叶轮来紧缩由空气滤清器管道送来的新鲜空气，然后再送入气缸。
 
-![car016](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car016.jpg)
+![car016](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car016.jpg)
 
 ###### 优点
 极好地运用了废气排出时的动能，相对来说，它不会添加发动机的负荷，所以比较高效。
@@ -133,7 +133,7 @@ categories:
 
 在数据库中，我们把轿车分为a00级(微型车)、a0级(小型车)、a级(紧凑型车)、b级(中型车)、c级(中大型车)、d级(豪华车)，这些级别的划分标准是什么呢？
 
-![car001](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car001.jpg)
+![car001](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car001.jpg)
 
 ##### 以车身长度为判别依据（参考数值）
 3.7m以下为微型车(代表车型qq、spark、哈飞路宝、奥拓、微型面包车)
@@ -168,7 +168,7 @@ categories:
 
 轴距的长短对轿车的舒适性、操纵稳定性的影响很大。一般而言，轿车级别越高轴距越长，车厢长度越大，乘员乘坐的座位空间也越宽敞，抗俯仰和横摆性能越好，长轴距在提高直路巡航稳定性的同时，转向灵活性下降、转弯半径增大，汽车的机动性也越差。因此在稳定性和灵活性之间必须作出取舍，找到合适的平衡点。在高档长轴距的轿车上，这样的缺点已经被其他高科技装置所弥补。
 
-![car002](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car002.jpg)
+![car002](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car002.jpg)
 
 #### 3.前/后轮距
 前/后车轮在车辆支承平面(一般就是地面)上留下的轨迹的中心线之间的距离，即左前、右前车轮中心的距离。
@@ -177,21 +177,21 @@ categories:
 
 多数汽车前后轮距是一样的，但部分汽车前后轮距不一致，一般来说，运动型或跑车的前后轮距差别较明显，如法拉利612 ，前轮距为1688毫米，后轮距为1641毫米。由于轮距是指左右两个车轮中心线间的距离，而前后轮胎最外侧边线应在一条直线上，因此，如果轮胎较宽，则它的轮距自然就会较小。法拉利612的前轮胎宽245毫米，后轮胎宽284毫米，它们之间的轮距之差就成为必然。
 
-![car003](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car003.jpg)
+![car003](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car003.jpg)
 
 #### 4.最小离地间隙
 最小离地间隙是指满载车辆在水平停稳后，地面与车辆底部刚性部件(发动机油底壳、油箱或悬架托臂等部件)最低点之间的距离。离地间隙越大，通过不平路面的性能越好，反之，风阻小，高速稳定性较好。一般轿车的最小离地间隙为110毫米左右，而很多跑车甚至要低于100毫米，这是因为跑车的设计行驶速度都很高，为了增加高速行驶时的车身稳定性以及降低风阻，就要降低车身和离地间隙。越野车和suv车型的最小离地间隙较大，最低也要160毫米。
 
 一般来说，轿车车身最低点一般是变速箱或者机油底壳的下方、越野车的最低点一般是前后桥的差速器。
 
-![car004](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car004.jpg)
+![car004](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car004.jpg)
 
 #### 5.最小转弯直径
 最小转弯直径将汽车方向盘转到极限，让汽车进行圆周运动，车辆外侧转向轮胎面中心在平整地面上的轨迹圆直径中的较大者。表征汽车通过狭窄弯曲地带或绕开障碍物的能力。与汽车的轴距、轮距及转向轮的极限转角直接相关。轴距、轮距越大，转弯直径也越大；转向轮的极限转角越大，转弯直径就越小。
 
-![car005](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car005.jpg)
+![car005](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car005.jpg)
 
-![car006](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car006.jpg)
+![car006](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car006.jpg)
 
 #### 6.车体结构
 根据车体受力情况及不同结构，可分为承载式、半承载式、非承载式、空间构架式。
@@ -199,28 +199,28 @@ categories:
 ##### 承载式车身
 承载式车身的汽车没有刚性车架，加强了车头、侧围、车尾、底板等部位，发动机、前后悬架、传动系统的一部分等总成部件装配在车身上，车身负载通过悬架装置传给车轮。大多数轿车都采用承载式车身，有点事hi噪声小、重量轻、相对省油，缺点是强度相对低。
 
-![car007](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car007.jpg)
+![car007](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car007.jpg)
 
-![car008](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car008.jpg)
+![car008](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car008.jpg)
 
 ##### 非承载式车身
 非承载式车身的汽车有一个刚性车架，又称底盘大梁架，发动机、传动系统、车身等总成部件都固定在车架上，车架通过前后悬架装置与车轮连接。优点是底盘强度较高，抗颠簸性能好，车身不易扭曲变形。非承载式车身比较笨重，质量大，一般用在货车、客车和越野车上。 
 
 非承载式车身构造图
-![car009](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car009.jpg)
+![car009](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car009.jpg)
 
-![car010](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car010.jpg)
+![car010](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car010.jpg)
 
 梯形车架在车辆中的位置
 
-![car011](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car011.jpg)
+![car011](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car011.jpg)
 
 ##### 空间构架式(asf)
 空间构架式(asf，audi space frame)是奥迪研发的利用以铝为主要材料，结合其它材料构建车身的轻量化技术。也被称为audi space frame(asf)。这种技术阻止了随着功能性不断提高导致车身重量不断上升的趋势。
 
 空间构架式(asf)
 
-![car012](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car012.jpg)
+![car012](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car012.jpg)
 
 #### 7.接近角/离去角
 接近角是指满载车辆在水平静止时，地面与前轮轮胎外缘到保险杠平面之间的最大夹角。接近角越大车辆通过性越好。由于用途不同，轿车较少提及接近角，一般轿车的接近角在25°左右，而suv车型的接近角都会在30°以上。
@@ -231,7 +231,7 @@ categories:
 
 相对于接近角用在爬坡时，离去角则是适用在下坡时。车辆一路下坡，当前轮已经行驶到平地上，后轮还在坡道上时，离去角越大，车辆就可以由越陡的坡道上下来。
 
-![car013](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car013.jpg)
+![car013](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car013.jpg)
 
 #### 8.风阻系数
 风阻系数是通过风洞实验和下滑实验所确定的数学参数,用来计算汽车受到空气阻力大小。风阻系数取决于汽车外形，与空气阻力成正比，主要影响汽车的油耗和形式稳定性。一般来讲，我们在马路上看到的大多数轿车的风阻系数在0.30左右,流线性较好的汽车如跑车等,其风阻系数可以达到0.28以下，赛车可达到0.15左右。
@@ -242,7 +242,7 @@ categories:
 
 风阻系数=正面风阻力× 2÷(空气密度x车头正面投影面积x车速平方)。
 
-![car014](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car014.jpg)
+![car014](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car014.jpg)
 
 #### 9.最大涉水深度
 最大涉水深度(wattiefe)就是汽车能安全无故障地通过的最大水深度，是评价汽车越野通过性的重要指标之一。
@@ -250,7 +250,7 @@ categories:
 #### 10.行李舱容积
 行李舱容积(l)可显示行李箱的载物能力，般用一个数值或范围值表示，单位为升。两厢车型后排座位放倒前后壳容纳数量不同的物品，用范围值表示，如标致308sw后排座椅放倒前后，行李舱容积分别为674升和2149升。
 
-![car015](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car015.jpg)
+![car015](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car015.jpg)
 
 #### 11.倒车影像
 在停车时，在显示屏中会有有停车辅助线，能够很好的帮助新手车主。
@@ -291,11 +291,11 @@ categories:
 
 三厢式轿车中间高两头低，从侧面看前后对称，造型美观大方。三厢式小轿车的缺点内是车身尺寸长，在交通拥挤的大城市里行驶及停泊不是很方便。我们常见的桑塔那、捷达都是三厢车。三厢的POLO后面有后备箱；颐达就是三厢。很容易区分的。
 
-![car017](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car017.jpg)
+![car017](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car017.jpg)
 
 两厢车的前部与三厢车没有区别，不同之处在于这种汽车将乘员舱近似等高度向后延伸，把后容行李舱和乘员舱合为一体，使其减少为发动机舱和乘员舱两“厢”。两厢车尾部有宽敞的后车门，使这种汽车具备了使用灵活、用途广泛的特点：放倒平后排座位，就可以获得比三厢车大得多的载物空间，可用来运送许多大型家电和家庭用品。比如POLO大多数在路上跑的是二厢，后面是平的。
 
-![car018](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car018.jpg)
+![car018](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car018.jpg)
 
 #### 19.座位数
 座位数指的是汽车内含司机在内的座位，一般轿车为五座：前排坐椅是两个独立的坐椅，后排坐椅一般是长条坐椅。
@@ -304,17 +304,17 @@ categories:
 #### 1.副驾车门铭牌
 检查车辆的出厂日期，国产车不能超过三个月，进口车不能超过六个月哦，否则就有可能是库存车哦。
 
-![car019](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car019.jpg)
+![car019](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car019.jpg)
 
 #### 2.轮胎的生产日期
 检查轮胎的生产日期，最后两个代表轮胎的生产年份，前两个代表轮胎生产周数。
 
-![car020](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car020.jpg)
+![car020](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car020.jpg)
 
 #### 3.玻璃标志
 检查玻璃标志，是不是和原厂一致，生产日期不晚于整个工厂的日期，数字代表年份，点代表月份，点在前面用7减，点在后面13减。如果四个玻璃标识都不一样，有可能是事故车。
 
-![car021](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car021.jpg)
+![car021](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car021.jpg)
 
 #### 4.车辆公里数
 检查车辆公里数，最好不超过五十公里，检查排气筒内壁，有没有发黑的痕迹，如果明显发黑，说明是试驾车。
@@ -339,7 +339,7 @@ categories:
 贷款买车前需要交首付
 
 #### 8.汽车在整个生命周期里经历的更改类型
-![car022](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car022.jpg)
+![car022](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car022.jpg)
 
 上图从概念上展示了一台车在生命周期会遇到的更改，主要包括了年度款，小改款，大改款，全新车型，全新换代等。这些更改穿插在整个生命周期中，目的是为了保证产品竞争力和新鲜感，维持价格和销量。
 
@@ -348,7 +348,7 @@ categories:
 理论上来说，只有全新车型和全新换代才是消费者所理解的“新款”，其他类型的更改提供的新鲜度是很有限的。打个比方，iphone6到iphone6s，只能算年度款或者改款，iphone7到iphoneX就是真正意义的全新换代。
 
 #### 9.不同类型更改的定义
-![car023](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car023.jpg)
+![car023](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car023.jpg)
 
 #### 10.不同品牌的更新换代节奏的分析
-![car024](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnother/car024.jpg)
+![car024](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/car024.jpg)
