--- a/source/_posts/贷款知识.md
+++ b/source/_posts/贷款知识.md
@@ -12,26 +12,105 @@ tags:
 categories:
 - 贷款
 ---
-### 一、等额本息
+### 一、还款方式
+#### 1.等额本息还款
+<!--more-->
 等额本息还款方式是我们经常见和选择的还款方式。是把贷款的本金总额与利息总额相加,然后平均分摊到还款期限的每个月中。借款人按月归还固定金额,但每月还款额中的本金比重逐月递增、利息比重逐月递减。
 
-### 二、等额本金还款
+假设贷款120000元，贷款1年，利率6%
+
+##### 计算方式
+假设每月剩余欠款分别为a0 a1 a2 .... a11 a12 = 0 
+
+每月月供额A（本金+利息）
+
+a0 = 120000
+
+a1 = a0*(1+0.6/12)-A
+
+a2 = a1*(1+0.6/12)-A
+
+......
+
+a11 = a10*(1+0.6/12)-A
+
+a12 = a11*(1+0.6/12)-A = 0
+
+A = 10328
+
+**总结公式**
+设贷款总额为A，银行月利率为β，总期数为m（个月），月还款额设为X
+
+![loan001](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/loan001.jpg)
+
+##### 总利息
+
+328*12 = 3936
+
+#### 2.等额本金还款
 借款人将本金分摊到每个月内,同时付清上一交易日至本次还款日之间的利息。这种还款方式相对等额本息而言,总的利息支出较低,但是前期支付的本金和利息较多,还款负担逐月递减。
 
-### 三、一次还本付息
+##### 计算方式
+
+每月月供额 = (贷款本金/还款月数)+(贷款本金-已归还本金累计额)*月利率
+
+第一个月供额 = (120000/12)+(120000-0)*0.06/12 = 10000 + 600 = 10600
+
+第二个月供额 = (120000/12)+(120000-10000)*0.06/12 = 10000 + 550 = 10550
+
+...
+
+最后一个月供额 = (120000/12)+(120000-110000)*0.06/12 = 10000 + 50 = 10050
+
+##### 总利息
+第一个月利息：(120000-0)*0.06/12 = 600
+
+第二个月利息：(120000-1000)*0.06/12 = 550
+
+.....
+
+最后一个月利息：(120000-110000)*0.06/12 = 50
+
+总利息：600+550+500+450+400+350+300+250+200+150+100+50 = (600+50)/2*12 = 3900
+
+
+#### 3.一次还本付息
 一次还本付息,一般都是贷款期限在一年(含一年)以下的,到期后一次还本付息,利随本清。对小额短期贷款开放。这种还款方式,操作很简单,但适应的人群面比较窄,因为容易使借款人缺少还款强迫外力,造成信用损害。采用这种贷款,借款人最好有较好的自我安排能力。
 
-### 四、按期付息还本
+#### 4.按期付息还本
 “按期付息还本”就是借款人通过和银行协商，为贷款本金和利息归还制订不同还款时间单位。即自主决定按月、季度或年等时间间隔还款。实际上，就是借款人按照不同财务状况，把每个月要还的钱凑成几个月一起还。
 
-### 五、本金归还计划
+#### 5.本金归还计划
 借款人经过与贷款机构协商,每次本金还款不少于一定金额,两次还款间隔不超过一定期限,利息可以按月或按季度归还。这是等额本金还款的变体。借款人可以把利息和本金分开还,利息仍然按月和季度还款,数目递减。
 
-### 六、等额递增
+#### 6.等额递增
 
 等额递增是等额本息还款方式的另一种变体。它把还款年限进行了细化分割,每个分割单位中,还款方式等同于等额本息。区别在于,每个时间分割单位的还款数额是等额增加的.适合目前还款能力较弱,但是,已经预期到未来会逐步增加的人群。
 
-### 七、等额递减
+#### 7.等额递减
 
 这种还款方式,与等额递增没有本质上的差异。区别在于,每个时间分割单位的还款数额是等额减少的.如果预计到收入将减少,或者目前经济很宽裕,可以选择等额递减。
 
+### 二、提前还款
+假设贷款30年，还了10年，此时提前还款
+
+提前还款，产生的利息是前10年产生的，后20年银行还未收取。如果一次性把本金还掉是不会吃亏的。
+
+### 三、贷款坑点
+假设年利率12%
+
+**坑点一**
+120000*12% = 14400
+
+每个月都在还款，但利息并未减少，始终按总额计算利息。
+
+**坑点二**
+利息先付
+
+120000*12% = 14400
+
+实际只给了120000-14400 = 105600
+
+每个月还得还10000，总共120000
+
+代入等额本息计算，利率为24%，利息远远高于12%
