--- a/source/_posts/前端基础.md
+++ b/source/_posts/前端基础.md
@@ -997,7 +997,7 @@ function bucketSort(arr, bucketSize) {
 </script>
 ```
 ##### 树表查找
-##### 索引查找（分块查找
+##### 索引查找（分块查找）
 ##### 哈希查找
 ##### 贪心算法
 ```
