--- a/source/_posts/生活开支.md
+++ b/source/_posts/生活开支.md
@@ -7,15 +7,15 @@ tags:
 categories:
 - 生活
 ---
-1.房贷 2750
+1.房贷 2750 （总贷款300000，时间12年，2017年6月28-2029年6月28）
 
-2.车位贷 3000 (36250/年)
+2.车位贷 3000 （总贷款36250，时间1年，2020年7月15-2021年6月15）
 
-3.水电气 80
+3.借贷 1100 （总贷款12000，时间1年，2020年9月15-2021年8月15）
 
-4.网费 90
+4.水电气 80
 
-5.借贷 2000
+5.网费 90
 
 6.生活 1500
 
@@ -27,6 +27,6 @@ categories:
 
 10.垃圾费 8
 
-总计 9918
+总计 9018
 
 
