--- a/source/_posts/进制详解.md
+++ b/source/_posts/进制详解.md
@@ -8,3 +8,61 @@ categories:
 ---
 ### 一、什么是进制
 进制也就是进位制，是人们规定的一种进位方法。 对于任何一种进制---X进制，就表示某一位置上的数运算时是逢X进一位。 十进制是逢十进一，十六进制是逢十六进一，二进制就是逢二进一，以此类推，x进制就是逢x进位。
+
+#### 常见进制
+
+- 二进制
+- 八进制
+- 十进制
+- 十六进制
+
+### 二、二进制
+#### 什么是二进制
+二进制就是只有0和1两种表达形式的计数，简称二进制，我们的计算机存储数据的时候都是采用二进制进行存储。表达一个二进制数，每一位最大值不能超过1。
+
+#### 二进制写法
+01011001
+
+10100110
+
+01101010
+
+10101100
+
+二进制的后缀：b   例如：10011001b,这里需要注意一下，就是在程序编程的时候，要想表达一个二进制数，那么需要给它加一个前缀：0b,如：0b00000001。
+
+### 三、八进制
+#### 什么是八进制
+概念在这里我就不多说了，那么八进制它的表达形式取值只能从0~7取，也就是说，表达一个八进制数，每一位最大值不能超过7。
+
+#### 八进制的写法
+057
+
+010
+
+076
+
+025
+            
+八进制的前缀：0  如上所示
+
+### 四、十进制
+#### 什么是十进制
+十进制是我们最常见的一种计数方式，那么十进制每一位的表达形式只能从0~9取，每一位最大值不能超过9。
+
+#### 十进制的写法
+18
+
+20
+
+98
+
+6785
+
+注意；十进制数的写法就喝我们平时数学上的数字表达是一样的，在这里就不做过多的强调。
+
+### 五、十六进制
+#### 什么是十六进制
+十六进制是我们程序或者内存地址的一个常用的一种表达，每一位的取值范围为0~9和A~F，那么在这里，A对于的就是10，B对应的就是11，以此类推，F就是15，所以，十六进制是逢16进1.十六进制的写法： 0xcf   其中0x表示的是十六进制的前缀，声明这个数是十六进制数，后面的cf就是数值，当然这里字符的大小写并没有影响。
+
+例如：0xfc   0x1f  0xffdd
