--- a/source/_posts/进制详解.md
+++ b/source/_posts/进制详解.md
@@ -8,13 +8,17 @@ categories:
 ---
 ### 一、什么是进制
 进制也就是进位制，是人们规定的一种进位方法。 对于任何一种进制---X进制，就表示某一位置上的数运算时是逢X进一位。 十进制是逢十进一，十六进制是逢十六进一，二进制就是逢二进一，以此类推，x进制就是逢x进位。
+<!--more-->
+
 
 #### 常见进制
 
-- 二进制
-- 八进制
-- 十进制
-- 十六进制
+- 二进制 逢二进一
+- 八进制 逢八进一
+- 十进制 逢十进一
+- 十六进制 逢十六进一
+
+进行加法运算时逢X进一（满X进一），进行减法运算时借一当X，这就是X进制
 
 ### 二、二进制
 #### 什么是二进制
@@ -46,6 +50,8 @@ categories:
             
 八进制的前缀：0  如上所示
 
+**八进制的数和二进制的数可以按位对应（八进制一位对应二进制三位：2^3 ）**
+
 ### 四、十进制
 #### 什么是十进制
 十进制是我们最常见的一种计数方式，那么十进制每一位的表达形式只能从0~9取，每一位最大值不能超过9。
@@ -66,3 +72,73 @@ categories:
 十六进制是我们程序或者内存地址的一个常用的一种表达，每一位的取值范围为0~9和A~F，那么在这里，A对于的就是10，B对应的就是11，以此类推，F就是15，所以，十六进制是逢16进1.十六进制的写法： 0xcf   其中0x表示的是十六进制的前缀，声明这个数是十六进制数，后面的cf就是数值，当然这里字符的大小写并没有影响。
 
 例如：0xfc   0x1f  0xffdd
+
+### 六、进制转换
+#### 二进制，八进制，十六进制转换为十进制
+
+**转换规则：按权相加**
+
+假设当前数字是 N 进制，那么：
+
+- 对于整数部分，从右往左看，第 i 位的位权等于N^{i-1}
+- 对于小数部分，恰好相反，要从左往右看，第 j 位的位权为N^{-j}。
+
+更加通俗的理解是，假设一个多位数（由多个数字组成的数）某位上的数字是 1，那么它所表示的数值大小就是该位的位权。
+
+二进制数字转换为十进制：
+
+```
+1010.1011 = 1x2^3+0x2^2+1x2^1+0x2^0+1x2^{-1}+0x2^{-2}+1x2^{-3}+1x2^{-4} = 10.6875 
+```
+
+八进制转十进制：
+
+```
+754.2341 = 7x8^2+5x8^1+4x8^0+2x8^{-1}+3x8^{-2}+4x8^{-3}+1x8^{-4} = 492.304931640625 （十进制）
+```
+
+十六进制转十进制
+
+```
+EA9.2C8 = 14x16^2+10x16^1+9x16^0+2x16^{-1}+12x16^{-2}+8x16^-3 = 3753.173828125 （十进制）
+```
+
+#### 十进制转换为二进制，八进制，十六进制
+
+**整数部分**
+
+转换规则：除N取余，逆序排列
+
+- 将N做除数，用十进制整数除以N，可以得到一个商和余数；
+- 保留余数，用商继续除以N，又得到一个新的商和余数；
+- 仍然保留余数，用商继续除以 N，还会得到一个新的商和余数；
+- ......
+- 如此反复进行，每次都保留余数，用商接着除以 N，直到商为 0 时为止。
+
+把先得到的余数作为 N 进制数的低位数字，后得到的余数作为 N 进制数的高位数字，依次排列起来，就得到了 N 进制数字。
+
+**小数部分**
+
+转换规则：乘 N 取整，顺序排列
+
+- 用 N 乘以十进制小数，可以得到一个积，这个积包含了整数部分和小数部分；
+- 将积的整数部分取出，再用 N 乘以余下的小数部分，又得到一个新的积；
+- 再将积的整数部分取出，继续用 N 乘以余下的小数部分；
+- ……
+- 如此反复进行，每次都取出整数部分，用 N 接着乘以小数部分，直到积中的小数部分为 0，或者达到所要求的精度为止。
+
+把取出的整数部分按顺序排列起来，先取出的整数作为 N 进制小数的高位数字，后取出的整数作为低位数字，这样就得到了 N 进制小数。
+
+#### 二进制和八进制，十六进制的转换
+
+**二进制整数和八进制整数之间的转换**
+
+二进制整数转换为八进制整数时，每三位二进制数字转换为一位八进制数字，运算的顺序是从低位向高位依次进行，高位不足三位用零补齐。
+
+八进制整数转换为二进制整数时，思路是相反的，每一位八进制数字转换为三位二进制数字，运算的顺序也是从低位向高位依次进行。
+
+**二进制整数和十六进制整数之间的转换**
+
+二进制整数转换为十六进制整数时，每四位二进制数字转换为一位十六进制数字，运算的顺序是从低位向高位依次进行，高位不足四位用零补齐。
+
+十六进制整数转换为二进制整数时，思路是相反的，每一位十六进制数字转换为四位二进制数字，运算的顺序也是从低位向高位依次进行。
