--- a/source/_posts/微信扫码登录实现原理.md
+++ b/source/_posts/微信扫码登录实现原理.md
@@ -10,9 +10,9 @@ tags:
 categories:
 - 微信
 ---
-#### 一、生成二维码
+#### 1.生成二维码
 首先，用户打开网站的登录首页的时候，浏览器就会向对应网页服务器发送获取登录二维码的请求，服务器收到请求后，会随机生成一个 uuid，将这个 uuid 作为key值存入redis服务器，同时设置一个过期时间，一旦过期后，用户登录二维码需要进行刷新重新获取。
-
+<!--more-->
 同时，将这个key值和公司的验证字符串合在一起，通过二维码生成接口，生成一个二维码的图片。然后，将二维码图片和 uuid 一起返回给用户浏览器。
 
 例如，对于某个登录的网页（我打开的是力扣的微信登录地址），我们习惯性地打开了浏览器的开发者工具，我发现当我在登录页面停滞一小会（大概30秒样子），请求链接会不断发生变化，如下图所示：
@@ -23,7 +23,7 @@ categories:
 - 当用户打开网站后，网站后台根据微信 OAuth2.0 协议向微信开发平台请求授权登录，并传递事先在微信开发平台中审核通过的 AppID 和 AppSecrect 等参数
 - 微信开发平台对AppID等参数进行验证，并向网站后台返回二维码
 
-#### 二、识别扫码用户
+#### 2.识别扫码用户
 当用户拿出手机扫描二维码，就可以得到一个验证信息和一个 uuid。由于手机端已经进行过了登录，在访问手机端的服务器的时候，参数中都会携带一个用户的token，手机端服务器可以从中解析到用户的 userId（这里从token中取值而不是手机端直接传userid是为了安全，直接传userid可能会被截获和修改，token是加密的，被修改的风险会小很多）。
 
 手机端将解析到的数据与微信账号绑定，向微信开发平台发送登录验证请求，微信开发平台验证绑定数据，调用网站后台的回调接口，发送授权临时票据 code ，如果授权成功，返回一个确认信息给手机端。
@@ -44,5 +44,5 @@ categories:
 
 在获得了 access_token 后就可以解析用户的一些基本信息，包括头像、用户名、性别、城市等。这样一来，整个微信扫描登录的过程就完成了。
 
-#### 三、实验流程图
+#### 3.实验流程图
 ![wechat002](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/wechat002.jpg)
