--- a/source/_posts/如何搭建高性能网站.md
+++ b/source/_posts/如何搭建高性能网站.md
@@ -287,4 +287,69 @@ http {
 - 图片懒加载
 - layzr.js
 
-##### 
+##### 3.10 iconfont
+中文（字体图表），现在比较流行的一种用法。使用字体图表有几种好处
+
+- 矢量
+- 轻量
+- 易修改
+- 不占用图片资源请求。
+
+就像上面说的雪碧图，如果都用字体图标来替换的画，一次请求都免了，可以直接打到bundle包中。
+
+使用前提是UI给点力，设计趋向于字体图标，提前给好资源，建立好字体图标库。
+
+##### 3.11 逻辑后移
+逻辑后移是一种比较常见的优化手段。用一个打开文章网站的操作来举个例子。
+
+没有逻辑后移处理的请求顺序是这个样子的
+
+![web012.jpg](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/web012.jpg)
+
+页面的展示主体是文章展示，如果文章展示的请求靠后了，那么渲染文章出来的时间必然靠后，因为有可能因为请求阻塞等情况，影响请求响应情况，如果超过一次并发的情况的话，会更加的慢。如图的这种情况也是在我们项目中发生过的。
+
+很明显我们应该把主体“请求文章”接口前移，把一些非主体的请求逻辑后移。这样的话可以尽快的把主体渲染出来，就会快很多。
+优化后的顺序是这个样子的。
+
+![web013.jpg](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/web013.jpg)
+
+在平常的开发中建议时常注意逻辑后移的情况，突出主体逻辑。可以极大的提升用户体验。
+
+##### 3.12 算法复杂度
+在数据量大的应用场景中，需要着重注意算法复杂度问题。
+
+在这个方面可以参考Javascript算法之复杂度分析这篇文章。
+
+如上面Performance解析出的Javascript执行指标上，可以推测出来你的code执行效率如何，如果执行时间过长就要考虑一下是否要优化一下复杂度了。
+
+> 在时间换空间，空间换时间的选择上，要根据业务场景来进行取舍。
+
+##### 3.13 组件渲染
+拿react举例，组件分割方面不要太深。需要控制组件的渲染，尤其是深层组件的render。
+老生常谈的话题，我们可以一些方式来优化组件渲染
+
+- 声明周期控制 - 比如react的shouldComponentUpdate来控制组件渲染。
+- 官网提供的api- PureComponent
+- 控制注入组件的参数
+- 分配组件唯一key
+
+没有必要的渲染是对性能的极大浪费。
+
+##### 3.14 node middleware
+中文（node 中间件）
+中间件主要是指封装所有Http请求细节处理的方法。一次Http请求通常包含很多工作，如记录日志、ip过滤、查询字符串、请求体解析、Cookie处理、权限验证、参数验证、异常处理等，但对于Web应用而言，并不希望接触到这么多细节性的处理，因此引入中间件来简化和隔离这些基础设施与业务逻辑之间的细节，让我们能够关注在业务的开发上，以达到提升开发效率的目的。
+
+使用node middleware合并请求。减少请求次数。这种方式也是非常实用的。
+
+##### 3.15 web worker
+Web Worker 的作用，就是为 JavaScript 创造多线程环境，允许主线程创建 Worker 线程，将一些任务分配给后者运行。在主线程运行的同时，Worker 线程在后台运行，两者互不干扰。等到 Worker 线程完成计算任务，再把结果返回给主线程。这样的好处是，一些计算密集型或高延迟的任务，被 Worker 线程负担了，主线程（通常负责 UI 交互）就会很流畅，不会被阻塞或拖慢。
+
+合理实用web worker可以优化复杂计算任务。这里直接抛阮一峰的入门文章：[传送门](http://www.ruanyifeng.com/blog/2018/07/web-worker.html)
+
+##### 3.16 缓存
+缓存方面可以讲非常多的内容，我会单独开一篇缓存全攻略文章来详细讲述，大家可以➕个关注哈，关注越多写的越快。
+
+合理的利用强缓存、缓存协商、动态缓存等等机制，可以极大提升用户体验及页面打开速度。在开发过程中，缓存也成为了不可或缺的一部分。
+
+
+
