--- a/source/_posts/深拷贝与浅拷贝.md
+++ b/source/_posts/深拷贝与浅拷贝.md
@@ -8,7 +8,7 @@ categories:
 ---
 #### 一、定义
 其实深拷贝和浅拷贝都是针对的引用类型，JS中的变量类型分为值类型（基本类型）和引用类型；对值类型进行复制操作会对值进行一份拷贝，而对引用类型赋值，则会进行地址的拷贝，最终两个变量指向同一份数据
-
+<!--more-->
 ```
 // 基本类型
 var a = 1;
