--- a/source/_posts/如何搭建高性能网站.md
+++ b/source/_posts/如何搭建高性能网站.md
@@ -122,10 +122,92 @@ chrome自带的performance模块。先附上一个官网文档传送门：Perfor
 这些指标就是我们需要重点关注的，当然performance的功能并不止于此。
 先记住如何获取到这些指标，后面来一一进行解析优化。
 
-##### 2.5 抓包
+##### 2.5 PerformanceNavigationTiming
+
+获取各个阶段的响应时间，我们所要用到的接口是PerformanceNavigationTiming接口。
+
+PerformanceNavigationTiming 提供了用于存储和检索有关浏览器文档事件的指标的方法和属性。 例如，此接口可用于确定加载或卸载文档需要多少时间。
+
+```js
+function showNavigationDetails() {
+  const [entry] = performance.getEntriesByType("navigation");
+  console.table(entry.toJSON());
+}
+```
+
+使用这个函数，我们就可以获取各个阶段的响应时间，如图：
+
+![web014.jpg](http://alivnram-test.oss-cn-beijing.aliyuncs.com/alivnblog/web014.jpg)
+
+参数说明
+- navigationStart 加载起始时间
+
+- redirectStart 重定向开始时间（如果发生了HTTP重定向，每次重定向都和当前文档同域的话，就返回开始重定向的fetchStart的值。其他情况，则返回0）
+
+- redirectEnd 重定向结束时间（如果发生了HTTP重定向，每次重定向都和当前文档同域的话，就返回最后一次重定向接受完数据的时间。其他情况则返回0）
+
+- fetchStart 浏览器发起资源请求时，如果有缓存，则返回读取缓存的开始时间
+
+- domainLookupStart 查询DNS的开始时间。如果请求没有发起DNS请求，如keep-alive，缓存等，则返回fetchStart
+
+- domainLookupEnd 查询DNS的结束时间。如果没有发起DNS请求，同上
+
+- connectStart 开始建立TCP请求的时间。如果请求是keep-alive，缓存等，则返回domainLookupEnd
+(secureConnectionStart) 如果在进行TLS或SSL，则返回握手时间
+
+- connectEnd 完成TCP链接的时间。如果是keep-alive，缓存等，同connectStart
+
+- requestStart 发起请求的时间
+
+- responseStart 服务器开始响应的时间
+
+- domLoading 从图中看是开始渲染dom的时间，具体未知
+
+- domInteractive 未知
+
+- domContentLoadedEventStart 开始触发DomContentLoadedEvent事件的时间
+
+- domContentLoadedEventEnd DomContentLoadedEvent事件结束的时间
+- domComplete 从图中看是dom渲染完成时间，具体未知
+
+- loadEventStart 触发load的时间，如没有则返回0
+
+- loadEventEnd load事件执行完的时间，如没有则返回0
+
+- unloadEventStart unload事件触发的时间
+
+- unloadEventEnd unload事件执行完的时间
+
+关于我们的Web性能，我们会用到的时间参数：
+
+- DNS解析时间： domainLookupEnd - domainLookupStart
+
+- TCP建立连接时间： connectEnd - connectStart
+
+- 白屏时间： responseStart - navigationStart
+
+- dom渲染完成时间： domContentLoadedEventEnd - navigationStart
+
+- 页面onload时间： loadEventEnd - navigationStart
+
+根据这些时间参数，我们就可以判断哪一阶段对性能有影响。
+
+##### 2.6 抓包
 有一些业务状况是没有上述的一些调试工具该怎么办呢？我们可以利用抓包工具进行对页面信息对抓取，上述我们通过chrome工具排查出来的指标，也可以通过抓包工具进行抓取。
 
 这里我推荐一款抓包工具charles。使用教程网上很多，自行搜索即可
+
+##### 2.7 性能测试工具
+
+- Pingdom
+
+- Load Impact
+
+- WebPage Test
+
+- Octa Gate Site Timer
+
+- Free Speed Test
 
 #### 三、优化指标
 ##### 3.1 tree shaking
@@ -347,9 +429,68 @@ Web Worker 的作用，就是为 JavaScript 创造多线程环境，允许主线
 合理实用web worker可以优化复杂计算任务。这里直接抛阮一峰的入门文章：[传送门](http://www.ruanyifeng.com/blog/2018/07/web-worker.html)
 
 ##### 3.16 缓存
-缓存方面可以讲非常多的内容，我会单独开一篇缓存全攻略文章来详细讲述，大家可以➕个关注哈，关注越多写的越快。
+
+缓存的原理就是更快读写的存储介质+减少IO+减少CPU计算=性能优化。而性能优化的第一定律就是：优先考虑使用缓存。
+
+缓存的主要手段有：浏览器缓存、CDN、反向代理、本地缓存、分布式缓存、数据库缓存。
 
 合理的利用强缓存、缓存协商、动态缓存等等机制，可以极大提升用户体验及页面打开速度。在开发过程中，缓存也成为了不可或缺的一部分。
 
+##### 3.17 GPU渲染
 
+每个网页或多或少都涉及到一些CSS动画，通常简单的动画对于性能的影响微乎其微，然而如果涉及到稍显复杂的动画，不当的处理方式会使性能问题变得十分突出。
+
+像Chrome, FireFox, Safari, IE9+和最新版本的Opera都支持GPU加速，当它们检测到页面中某个DOM元素应用了某些CSS规则时就会开启。
+
+虽然我们可能不想对元素应用3D变换，可我们一样可以开启3D引擎。例如我们可以用transform: translateZ(0) 来开启GPU加速 。
+
+只对我们需要实现动画效果的元素应用以上方法，如果仅仅为了开启硬件加速而随便乱用，那是不合理的。
+
+##### 3.18 Ajax可缓存
+
+Ajax在发送的数据成功后，为了提高页面的响应速度和用户体验，会把请求的URL和返回的响应结果保存在缓存内，当下一次调用Ajax发送相同的请求（URL和参数完全相同）时，它就会直接从缓存中拿数据。
+
+在进行Ajax请求的时候，可以选择尽量使用get方法，这样可以使用客户端的缓存，提高请求速度。
+
+##### 3.19 Resource Hints
+
+Resource Hints(资源预加载)是非常好的一种性能优化方法，可以大大降低页面加载时间，给用户更加流畅的用户体验。
+
+现代浏览器使用大量预测优化技术来预测用户行为和意图，这些技术有预连接、资源与获取、资源预渲染等。
+
+Resource Hints 的思路有如下两个：
+
+- 当前将要获取资源的列表
+
+- 通过当前页面或应用的状态、用户历史行为或 session 预测用户行为及必需的资源
+
+实现Resource Hints的方法有很多种，可分为基于 link 标签的 DNS-prefetch、subresource、preload、 prefetch、preconnect、prerender，和本地存储 localStorage。
+
+##### 3.20 SSR
+
+渲染过程在服务器端完成，最终的渲染结果 HTML 页面通过 HTTP 协议发送给客户端，又被认为是‘同构'或‘通用'，如果你的项目有大量的detail页面，相互特别频繁，建议选择服务端渲染。
+
+服务端渲染(SSR)除了SEO还有很多时候用作首屏优化，加快首屏速度，提高用户体验。但是对服务器有要求，网络传输数据量大，占用部分服务器运算资源。
+
+Vue的Nuxt.js和React的next.js都是服务端渲染的方法。
+
+##### 3.21 UNPKG
+
+UNPKG是一个提供npm包进行CDN加速的站点，因此，可以将一些比较固定了依赖写入html模版中，从而提高网页的性能。首先，需要将这些依赖声明为external，以便webpack打包时不从node_modules中加载这些资源，配置如下：
+
+```js
+externals: { 'react': 'React' }
+```
+
+其次，你需要将所依赖的资源写在html模版中，这一步需要用到html-webpack-plugin。下面是一段示例：
+
+```js
+<% if (htmlWebpackPlugin.options.node_env === 'development') { %>
+  <script src="https://unpkg.com/react@16.7.0/umd/react.development.js"></script>
+<% } else { %>
+  <script src="https://unpkg.com/react@16.7.0/umd/react.production.min.js"></script>
+<% } %>
+```
+
+这段代码需要注入node_env，以便在开发的时候能够获得更友好的错误提示。也可以选择一些比较自动的库，来帮助我们完成这个过程，比如webpack-cdn-plugin，或者dynamic-cdn-webpack-plugin。
 
