--- a/source/_posts/计算机网路词汇.md
+++ b/source/_posts/计算机网路词汇.md
@@ -31,58 +31,59 @@ tags:
 categories: 
 - 计算机网络
 ---
-##### IP：Internet Protocol 网络之间互连的协议
+IP：Internet Protocol 网络之间互连的协议
 
-##### SEO：Search Engine Optimization 搜索引擎优化。利用搜索引擎的搜索规则来提高展示排名。
+SEO：Search Engine Optimization 搜索引擎优化。利用搜索引擎的搜索规则来提高展示排名。
 <!--more-->
-##### B2B：Business to Business 企业对企业的电子商务，如阿里巴巴。
+B2B：Business to Business 企业对企业的电子商务，如阿里巴巴。
 
-##### B2C：Business to Customer 企业对个人的电子商务，如京东。
+B2C：Business to Customer 企业对个人的电子商务，如京东。
 
-##### C2C：Customer to Customer 个人对个人的电子商务，如淘宝。
+C2C：Customer to Customer 个人对个人的电子商务，如淘宝。
 
-##### O2O：Online to Offline 线上对线下，线下商务与线上推广相结合。
+O2O：Online to Offline 线上对线下，线下商务与线上推广相结合。
 
-##### 暗网：暗网（深网，不可见网，隐藏网）是指那些存储在网络数据库里、但不能通过超链接访问而需要通过动态网页技术访问的资源集合，不属于那些可以被标准搜索引擎索引的表面网络。
+暗网：暗网（深网，不可见网，隐藏网）是指那些存储在网络数据库里、但不能通过超链接访问而需要通过动态网页技术访问的资源集合，不属于那些可以被标准搜索引擎索引的表面网络。
 
-##### 共享经济：一般是指以获得一定报酬为主要目的，基于陌生人且存在物品使用权暂时转移的一种新的经济模式。
+共享经济：一般是指以获得一定报酬为主要目的，基于陌生人且存在物品使用权暂时转移的一种新的经济模式。
 
-##### 新零售：未来电子商务平台即将消失，线上线下和物流结合在一起，才会产生新零售。线上是指云平台，线下是指销售门店或生产商，新物流消灭库存，减少囤货量。（电子商务平台消失是指，现有的电商平台分散，每个人都有自己的电商平台）
+新零售：未来电子商务平台即将消失，线上线下和物流结合在一起，才会产生新零售。线上是指云平台，线下是指销售门店或生产商，新物流消灭库存，减少囤货量。（电子商务平台消失是指，现有的电商平台分散，每个人都有自己的电商平台）
 
-##### GUI：Graphical User Interface 图形用户界面，指采用图形方式显示的计算机操作用户界面。
+GUI：Graphical User Interface 图形用户界面，指采用图形方式显示的计算机操作用户界面。
 
-##### CLI：Command-line Interface 命令行界面，它通常不支持鼠标，用户通过键盘输入指令，计算机接收到指令后，予以执行。
+CLI：Command-line Interface 命令行界面，它通常不支持鼠标，用户通过键盘输入指令，计算机接收到指令后，予以执行。
 
-##### OOP：Object Oriented Programming 面向对象程序设计，OOP 的一条基本原则是计算机程序是由单个能够起到子程序作用的单元或对象组合而成。
+OOP：Object Oriented Programming 面向对象程序设计，OOP 的一条基本原则是计算机程序是由单个能够起到子程序作用的单元或对象组合而成。
 
-##### API：Application Programming Interface 应用程序编程接口，是一些预先定义的函数，目的是提供应用程序与开发人员基于某软件或硬件得以访问一组例程的能力，而又无需访问源码，或理解内部工作机制的细节。
+API：Application Programming Interface 应用程序编程接口，是一些预先定义的函数，目的是提供应用程序与开发人员基于某软件或硬件得以访问一组例程的能力，而又无需访问源码，或理解内部工作机制的细节。
 
-##### MVC模型：Model View Controller，是模型(model)－视图(view)－控制器(controller)的缩写，一种软件设计典范，用一种业务逻辑、数据、界面显示分离的方法组织代码，将业务逻辑聚集到一个部件里面，在改进和个性化定制界面及用户交互的同时，不需要重新编写业务逻辑。
+MVC模型：Model View Controller，是模型(model)－视图(view)－控制器(controller)的缩写，一种软件设计典范，用一种业务逻辑、数据、界面显示分离的方法组织代码，将业务逻辑聚集到一个部件里面，在改进和个性化定制界面及用户交互的同时，不需要重新编写业务逻辑。
 
-##### SDK：Software Development Kit 软件开发工具包，一般都是一些软件工程师为特定的软件包、软件框架、硬件平台、操作系统等建立应用软件时的开发工具的集合。
+SDK：Software Development Kit 软件开发工具包，一般都是一些软件工程师为特定的软件包、软件框架、硬件平台、操作系统等建立应用软件时的开发工具的集合。
 
-##### URL：Uniform Resoure Locator 统一资源定位器，对可以从互联网上得到的资源的位置和访问方法的一种简洁的表示。
+URL：Uniform Resoure Locator 统一资源定位器，对可以从互联网上得到的资源的位置和访问方法的一种简洁的表示。
 
-##### CMS：Content Management System 内容管理系统，是一种位于WEB 前端（Web 服务器）和后端办公系统或流程（内容创作、编辑）之间的软件系统。内容的创作人员、编辑人员、发布人员使用内容管理系统来提交、修改、审批、发布内容。
+CMS：Content Management System 内容管理系统，是一种位于WEB 前端（Web 服务器）和后端办公系统或流程（内容创作、编辑）之间的软件系统。内容的创作人员、编辑人员、发布人员使用内容管理系统来提交、修改、审批、发布内容。
 
-##### UED：User Experience Design  用户体验设计
+UED：User Experience Design  用户体验设计
 
-##### 病毒式营销：源于英文词汇viralmarketing。常用于进行网站推广、品牌推广等。利用的是用户口碑传播的原理，在互联网上，这种“口碑传播”更为方便，可以像病毒一样迅速蔓延，因此病毒性营销成为一种高效的信息传播方式，而且，由于这种传播是用户之间自发进行的，因此几乎是不需要费用的网络营销手段。
+病毒式营销：源于英文词汇viralmarketing。常用于进行网站推广、品牌推广等。利用的是用户口碑传播的原理，在互联网上，这种“口碑传播”更为方便，可以像病毒一样迅速蔓延，因此病毒性营销成为一种高效的信息传播方式，而且，由于这种传播是用户之间自发进行的，因此几乎是不需要费用的网络营销手段。
 
-##### 墨菲定律：如果有两种或两种以上的方式去做某件事情，而其中一种选择方式将导致灾难，则必定有人会做出这种选择。
+墨菲定律：如果有两种或两种以上的方式去做某件事情，而其中一种选择方式将导致灾难，则必定有人会做出这种选择。
 
-##### 摩尔定律：当价格不变时，集成电路上可容纳的元器件的数目，约每隔18-24个月便会增加一倍，性能也将提升一倍。换言之，每一美元所能买到的电脑性能，将每隔18-24个月翻一倍以上。这一定律揭示了信息技术进步的速度。
+摩尔定律：当价格不变时，集成电路上可容纳的元器件的数目，约每隔18-24个月便会增加一倍，性能也将提升一倍。换言之，每一美元所能买到的电脑性能，将每隔18-24个月翻一倍以上。这一定律揭示了信息技术进步的速度。
 
-##### 局域网
+**局域网**
+
 局域网（Local Area Network，LAN）是指在某一区域内由多台计算机互联成的计算机组。一般是方圆几千米以内。局域网可以实现文件管理、应用软件共享、打印机共享、工作组内的日程安排、电子邮件和传真通信服务等功能。局域网是封闭型的，可以由办公室内的两台计算机组成，也可以由一个公司内的上千台计算机组成。
 
 局域网（Local Area Network，LAN）是在一个局部的地理范围内（如一个学校、工厂和机关内），一般是方圆几千米以内，将各种计算机，外部设备和数据库等互相联接起来组成的计算机通信网。它可以通过数据通信网或专用数据电路，与远方的局域网、数据库或处理中心相连接，构成一个较大范围的信息处理系统。局域网可以实现文件管理、应用软件共享、打印机共享、扫描仪共享、工作组内的日程安排、电子邮件和传真通信服务等功能。局域网严格意义上是封闭型的。它可以由办公室内几台甚至上千上万台计算机组成。决定局域网的主要技术要素为：网络拓扑，传输介质与介质访问控制方法。
 
 局域网由网络硬件（包括网络服务器、网络工作站、网络打印机、网卡、网络互联设备等）和网络传输介质，以及网络软件所组成。
 
-##### to B即面向企业，to C即面向普通用户
+to B即面向企业，to C即面向普通用户
 
-##### SSD 固态驱动器，俗称固态硬盘。具备快速读写、质量轻、能耗低以及体积小等特点，同时其劣势也较为明显。其价格仍较为昂贵，容量较低，一旦硬件损坏，数据较难恢复等；并且亦有人认为固态硬盘的耐用性（寿命）相对较短。
+SSD 固态驱动器，俗称固态硬盘。具备快速读写、质量轻、能耗低以及体积小等特点，同时其劣势也较为明显。其价格仍较为昂贵，容量较低，一旦硬件损坏，数据较难恢复等；并且亦有人认为固态硬盘的耐用性（寿命）相对较短。
 
-##### HDD 硬盘驱动器，俗称机械硬盘。容量大，价格相对较低
+HDD 硬盘驱动器，俗称机械硬盘。容量大，价格相对较低
 
