--- a/source/_posts/正则表达式一手掌握.md
+++ b/source/_posts/正则表达式一手掌握.md
@@ -204,7 +204,7 @@ str.match(reg) // ['svg']
 
 ##### 7.1 前向查找和后向查找齐用
 
-假设要获取 <img crossorigin src="https://abcdefg.com" data-img-url="https://test.com"> 中的 data-img-url 属性中的链接。可以确定的是链接左边一定是 data-img-url=" ，右边一定是紧贴着 " （非贪婪）。
+假设要获取 ```<img crossorigin src="https://abcdefg.com" data-img-url="https://test.com">```中的 data-img-url 属性中的链接。可以确定的是链接左边一定是 data-img-url=" ，右边一定是紧贴着 " （非贪婪）。
 
 ```js
 const str = '<img crossorigin src="https://abcdefg.com" data-img-url="https://test.com">'
