--- a/source/_posts/创建闭包的方式.md
+++ b/source/_posts/创建闭包的方式.md
@@ -7,6 +7,8 @@ tags:
 categories:
 - JavaScript
 ---
+闭包的定义很简单：函数 A 返回了一个函数 B，并且函数 B 中使用了函数 A 的变量，函数 B 就被称为闭包。
+
 #### 1.返回值
 在函数的内部，再定义一个函数，作为返回值被返回。
 <!--more-->
