--- a/source/_posts/前端知识总结一.md
+++ b/source/_posts/前端知识总结一.md
@@ -351,6 +351,8 @@ let foo = function() { console.log(1) };
 
 #### 2.7 闭包
 
+闭包的定义很简单：函数 A 返回了一个函数 B，并且函数 B 中使用了函数 A 的变量，函数 B 就被称为闭包。
+
 闭包属于一种特殊的作用域，称为 静态作用域。它的定义可以理解为: 父函数被销毁 的情况下，返回出的子函数的[[scope]]中仍然保留着父级的单变量对象和作用域链，因此可以继续访问到父级的变量对象，这样的函数称为闭包。
 
 闭包会产生一个很经典的问题:
