--- a/source/_posts/通用的编程原则.md
+++ b/source/_posts/通用的编程原则.md
@@ -17,6 +17,8 @@ DRY（不要重复自己，don't repeat yourself）
 <!--more-->
 YAGNI （你不会用到它的，ya ain't gonna need it）
 
+KISS （保持简单易懂，Keep It Simple & Stupid）
+
 最小意外原则（Principle of least surprise）
 
 单一责任（single responsibility）等等。
