--- a/source/_posts/js-11-深拷贝与浅拷贝.md
+++ b/source/_posts/js-11-深拷贝与浅拷贝.md
@@ -222,7 +222,7 @@ console.log(arr);//[1,2,3,4,5]
 console.log(newArr);//[1,2,3,4,5,6]
 ```
 
-**<span style="color:red">这些方法执行的是浅拷贝，只有当数组元素是基本类型时2有效。当数组的元素是对象的时候，更改对象的值，另一个也会跟着变</span>**
+**<span style="color:red">这些方法执行的是浅拷贝，只有当数组元素是基本类型时有效。当数组的元素是对象的时候，更改对象的值，另一个也会跟着变</span>**
 
 <br/>
 
