--- a/source/_posts/js-12-防抖与节流.md
+++ b/source/_posts/js-12-防抖与节流.md
@@ -19,7 +19,8 @@ categories:
 html 文件中代码如下
 
 ```html
-<div id="content" style="height:150px;line-height:150px;text-align:center; color: #fff;background-color:#ccc;font-size:80px;"></div>
+<div id="content" style="height:150px;line-height:150px;text-align:center; 
+color: #fff;background-color:#ccc;font-size:80px;"></div>
 <script>
     let num = 1;
     let content = document.getElementById('content');
